# better_any

./: .gitignore  Cargo.toml  README.md
better_any/: Cargo.toml
better_any/src/: lib.rs  nightly.rs  no_std.rs
better_any/tests/: compile_fail.rs  nightly.rs  test.rs
better_any/tests/compile_fail/: compile_error.rs  compile_error.stderr
better_typeid/: Cargo.toml
better_typeid/src/: lib.rs
better_typeid/tests/: expand.rs  test.rs
better_typeid/tests/expand/: with_generic.expanded.rs  with_generic.rs
better_typeid_derive/: Cargo.toml
better_typeid_derive/src/: lib.rs
