[package]
name = "better_any"
version = "0.1.0"
authors = ["Konstantin Anisimov <rrevenantt@gmail.com>"]
homepage = "https://github.com/rrevenantt/better_typeid"
repository = "https://github.com/rrevenantt/better_typeid"
license = "MIT OR Apache-2.0"
description = "Type id and Any for non static types"
readme = "README.md"
keywords = ["Any", "TypeId", "downcast","dynamic dispatch"]
edition = "2018"

[dependencies]
better_typeid_derive = "=0.1.0"

[dev-dependencies]
trybuild = "=1.0"
macrotest = "=1.0"
